(Grav GitSync) Automatic Commit from ryanthara